# mir

./: pyproject.toml
mir/: __main__.py  craft.py
mir/yoinks/: __init__.py  cnn.py  duckduckgo.py  github.py  wikipedia.py
mira/: __main__.py  constants.py  craft.py  fetch.py  filter.py
mira/yoinks/: __init__.py  bbc.py  duckduckgo.py  google.py  stackexchange.py  wikipedia.py
redo/: duckduckgo.py  fetch.py  safereddit.py  scraper.py  search.py  stackoverflow.py  wikipedia.py
